# core_socket

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ByteArray.h  ConnectionMgr.h  ISocketHandler.h  Ipv4Address.h  ListenSocket.h  ResolvSocket.h  Socket.h  SocketHandler.h  TcpConnection.h  TcpSocket.h  Utility.h  socket_include.h  sockets-config.h
src/: Application.cc  CMakeLists.txt  ConnectionMgr.cc  Ipv4Address.cpp  ResolvServer.cpp  ResolvSocket.cpp  Socket.cpp  SocketHandler.cpp  TcpConnection.cc  TcpSocket.cpp  Utility.cpp
test/: CMakeLists.txt  ConnectionMgr_test.cc  ListenSocket_test.cc  TcpConnection_test.cc  gtest_main.cc
